<?xml version="1.0"?>
<package>
  <name>flow_control_py</name>
  <version>0.0.0</version>
  <description>The flow_control_py package</description>
  <maintainer email="herve.frezza-buet@centralesupelec.fr">Herve Frezza-Buet</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>


  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
